[project]
name = "kata6"
version = "0"
requires-python = ">=3.12"

[project.scripts]
build-cards = "build_cards:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["scripts/build_cards.py"]
sources = ["scripts"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests", "src"]
addopts = "--doctest-modules"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 60
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Algorithms are written for index-card brevity; allow compound statements.
ignore = ["E701"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]
"tests/*" = ["E501"]
